# superbird-buildroot

./: README.md  setenv.h  setenv.sh
buildroot/: Config.in.legacy  Makefile
buildroot/arch/: Config.in.arm
buildroot/configs/: a1_ad401_a32_release_defconfig  a1_ad402_a32_release_defconfig  axg_s400-emmc_a6432_release_defconfig  axg_s400_a6432_release_defconfig  axg_s400_sbr_a6432_release_defconfig  axg_s400_sbravs_a6432_release_defconfig  axg_s410_SBR_a6432_release_defconfig  axg_s420_a6432_release_defconfig  c1_ae400-fastboot_a6432_release_defconfig  c1_ae400-fastboot_a64_release_defconfig  c1_ae400-nand_a6432_release_defconfig  c1_ae400-nand_a64_release_defconfig  c1_ae400-nand_legacy_a6432_release_defconfig  c1_ae400-nand_legacy_a64_release_defconfig  c1_ae400_a6432_release_defconfig  c1_ae400_a64_release_defconfig  c1_ae400_legacy_a6432_release_defconfig  c1_ae400_legacy_a64_release_defconfig  c1_ae400_uvc_a64_release_defconfig  c1_ae401_a64_release_defconfig  c1_ae401_legacy_a64_release_defconfig  g12a_u200_a64_release_defconfig  (+112 more)
multimedia/: .gitignore  740d1ccf.diff  Config.in  multimedia.mk
multimedia/aml_amaudioutils/src/cutils/: CMakeLists.txt  Makefile  cutils.mk  logcat.cpp  properties.cpp  str_parms.cpp
multimedia/aml_audio_hal/: Android.mk  CMakeLists.txt
multimedia/aml_audio_hal/amlogic_AQ_tools/: Amlogic_DRC_Param_Generator  Amlogic_EQ_Param_Generator  aml_DRC_param_gen.h  aml_EQ_param_gen.h  aml_ng.h  audio_eq_drc_compensation.c  audio_eq_drc_compensation.h  audio_eq_drc_parser.c  audio_eq_drc_parser.h
multimedia/aml_audio_hal/amlogic_AQ_tools/ini/: dictionary.c  dictionary.h  iniparser.c  iniparser.h
multimedia/aml_audio_hal/audio_hal/: Android.mk  DLGAudioPolicyManager.cpp  DLGAudioPolicyManager.h  alsa_config_parameters.c  alsa_config_parameters.h  alsa_manager.c  alsa_manager.h  amlAudioMixer.c  amlAudioMixer.h  aml_ac3_parser.c  aml_ac3_parser.h  aml_audio_delay.c  aml_audio_delay.h  aml_audio_ease.c  aml_audio_ease.h  aml_audio_mixer.c  aml_audio_mixer.h  aml_audio_resample_manager.c  aml_audio_resample_manager.h  aml_audio_stream.c  aml_audio_stream.h  aml_audio_timer.c  aml_audio_timer.h  aml_avsync_tuning.c  aml_dca_dec_api.c  aml_dca_dec_api.h  aml_dcv_dec_api.c  aml_dcv_dec_api.h  aml_hw_mixer.c  aml_hw_mixer.h  aml_resample_wrap.cpp  aml_resample_wrap.h  audio_aec_process.cpp  audio_aec_process.h  audio_android_resample_api.c  audio_android_resample_api.h  audio_data_process.c  audio_data_process.h  audio_dtv_ad.c  audio_dtv_ad.h  (+35 more)
multimedia/aml_audio_hal/audio_hal/libaudioprocessing/: AudioResampler.cpp  AudioResamplerCubic.cpp  AudioResamplerCubic.h  AudioResamplerDyn.cpp  AudioResamplerDyn.h  AudioResamplerFirGen.h  AudioResamplerSinc.cpp  AudioResamplerSinc.h  CMakeLists.txt
multimedia/aml_audio_hal/bt_voice/kehwin/: audio_kw.h
multimedia/aml_audio_hal/include/: atomic.h  compiler.h
multimedia/aml_audio_hal/include/audio_utils/: primitives.h
multimedia/aml_audio_hal/include/system/: audio-base-utils.h  audio-base.h  audio.h  audio_effect.h
multimedia/aml_audio_hal/include/utils/: alsa_device_parser.h  aml_alsa_mixer.h  aml_audio_mixer.h  aml_audio_parser.h  aml_audio_resampler.h  aml_audio_types_def.h  aml_conf_loader.h  aml_conf_parser.h  aml_data_utils.h  aml_ringbuffer.h  aml_volume_utils.h  audio_trace.h  spdifenc_wrap.h
multimedia/aml_audio_hal/libms12/: Android.mk
multimedia/aml_audio_hal/libms12/include/: DolbyMS12.h  DolbyMS12ConfigParams.h  DolbyMS12Status.h  aml_audio_ms12.h  dolby_ms12.h  dolby_ms12_config_params.h
multimedia/aml_audio_hal/libms12/src/: DolbyMS12.cpp  DolbyMS12ConfigParams.cpp  DolbyMS12Status.cpp  aml_audio_ms12.c  dolby_ms12.cpp  dolby_ms12_config_params.cpp  dolby_ms12_status.cpp
multimedia/aml_audio_hal/libms12v2/: CMakeLists.txt  Makefile  libms12.mk
multimedia/aml_audio_hal/libms12v2/include/: DolbyMS12.h  DolbyMS12ConfigParams.h  DolbyMS12Status.h  aml_audio_ms12.h  dolby_ms12.h  dolby_ms12_config_parameter_struct.h  dolby_ms12_config_params.h  dolby_ms12_output_mask.h  dolby_ms12_status.h
multimedia/aml_audio_hal/libms12v2/src/: DolbyMS12.cpp  DolbyMS12ConfigParams.cpp  DolbyMS12Status.cpp  aml_audio_ms12.c  dolby_ms12.cpp  dolby_ms12_config_params.cpp  dolby_ms12_status.cpp
multimedia/aml_audio_hal/rcaudio/: Android.mk  AudioHardwareInput.cpp  AudioHardwareInput.h  AudioHotplugThread.cpp  AudioHotplugThread.h  AudioStreamIn.cpp  AudioStreamIn.h  audio_hal_thunks.cpp
multimedia/aml_audio_hal/rcaudio/hidraw/: AudioHidrawStreamIn.cpp  huitong_audio.h
multimedia/aml_audio_hal/rcaudio/soundcard/: AudioSoundCardStreamIn.cpp
multimedia/aml_audio_hal/utils/: Android.mk  SPDIFEncoderAD.cpp  ac3_parser_utils.c  alsa_device_parser.c  aml_alsa_mixer.c  aml_android_utils.c  aml_audio_mixer.c  aml_audio_resampler.c  aml_data_utils.c  aml_dump_debug.c  aml_ringbuffer.c  aml_volume_utils.c  spdifenc_wrap.cpp
multimedia/aml_audio_hal/utils/AQ_test/: Android.mk  aml_AQ_tool.cpp  introduction.txt
multimedia/aml_audio_hal/utils/AQ_usb_bt/: Android.mk  bt_usb_tool.cpp
multimedia/aml_audio_hal/utils/aml_configs/: aml_conf_loader.c  aml_conf_parser.c
multimedia/aml_audio_hal/utils/aml_configs/test/: Android.mk  load.c  tvaudiohal.conf
multimedia/aml_audio_hal/utils/ini/: IniParser.cpp  ini.cpp
multimedia/aml_audio_hal/utils/ini/include/: ini.h  ini_config.h
multimedia/aml_audio_hal/utils/test/: test.c  test_data_utils.c
(+5388 files in other folders)
